<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layout" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoTuttiControlli"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_blue_dark"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:dividerPadding="150dp" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText1"
                    style="@style/textViewStyle"
                    android:text="@string/default1" />

                <Button
                    android:id="@+id/pesonalizzato1On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato1Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText2"
                    style="@style/textViewStyle"
                    android:text="@string/default2" />

                <Button
                    android:id="@+id/pesonalizzato2On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato2Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText3"
                    style="@style/textViewStyle"
                    android:text="@string/default3" />

                <Button
                    android:id="@+id/pesonalizzato3On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato3Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText4"
                    style="@style/textViewStyle"
                    android:text="@string/default4" />

                <Button
                    android:id="@+id/pesonalizzato4On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato4Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/ControlloTextGarage"
                    style="@style/textViewStyle"
                    android:text="@string/default5" />

                <Button
                    android:id="@+id/ControlloGarageOn"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/apri" />

                <Button
                    android:id="@+id/ControlloGarageOff"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/chiudi" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/ControlloTextAllarmeGarage"
                    style="@style/textViewStyle"
                    android:text="@string/default6" />

                <Button
                    android:id="@+id/ControlloAllarmeGarageOn"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/ControlloAllarmeGarageOff"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/ControlloTextAllarmeCasa"
                    style="@style/textViewStyle"
                    android:text="@string/default7" />

                <Button
                    android:id="@+id/ControlloAllarmeCasaOn"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/ControlloAllarmeCasaOff"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/SensoreTextAcquario"
                    style="@style/textViewStyle"
                    android:text="@string/default8" />

                <Button
                    android:id="@+id/ControlloPerditaAcquarioButton"
                    style="@style/buttonBluViewStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="20"
                    android:text="@string/controlla" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/SensoreTextCasa"
                    style="@style/textViewStyle"
                    android:text="@string/default9" />

                <Button
                    android:id="@+id/ControlloPerditaCasaButton"
                    style="@style/buttonBluViewStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="20"
                    android:text="@string/controlla" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/SensoreTextMovimento"
                    style="@style/textViewStyle"
                    android:text="@string/default10" />

                <Button
                    android:id="@+id/ControlloMovimentoCasaButton"
                    style="@style/buttonBluViewStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="20"
                    android:text="@string/controlla" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>