<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_dark" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoControlli"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,5" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="90dp" >

                <TextView
                    android:id="@+id/ControlloTextGarage"
                    style="@style/textViewStyle"
                    android:text="@string/default5" />

                <Button
                    android:id="@+id/ControlloGarageOn"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/apri" />

                <Button
                    android:id="@+id/ControlloGarageOff"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/chiudi" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/ControlloTextAllarmeGarage"
                    style="@style/textViewStyle"
                    android:text="@string/default6" />

                <Button
                    android:id="@+id/ControlloAllarmeGarageOn"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/ControlloAllarmeGarageOff"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/ControlloTextAllarmeCasa"
                    style="@style/textViewStyle"
                    android:text="@string/default7" />

                <Button
                    android:id="@+id/ControlloAllarmeCasaOn"
                    android:layout_width="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@layout/acceso"
                    android:text="@string/On"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/ControlloAllarmeCasaOff"
                    android:layout_width="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@layout/spento"
                    android:text="@string/Off"
                    android:textColor="@android:color/white" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>