<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/layout" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="344dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/infoPersonalizzato"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/holo_blue_dark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="0,5" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="90dp" >

                <TextView
                    android:id="@+id/personalizzatoText1"
                    style="@style/textViewStyle"
                    android:text="@string/default1" />

                <Button
                    android:id="@+id/pesonalizzato1On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato1Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText2"
                    style="@style/textViewStyle"
                    android:text="@string/default2" />

                <Button
                    android:id="@+id/pesonalizzato2On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato2Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText3"
                    style="@style/textViewStyle"
                    android:text="@string/default3" />

                <Button
                    android:id="@+id/pesonalizzato3On"
                    style="@style/buttonGreenViewStyle"
                    android:text="@string/On" />

                <Button
                    android:id="@+id/pesonalizzato3Off"
                    style="@style/buttonRedViewStyle"
                    android:text="@string/Off" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_marginTop="50dp" >

                <TextView
                    android:id="@+id/personalizzatoText4"
                    style="@style/textViewStyle"
                    android:text="@string/default4" />

                <Button
                    android:id="@+id/pesonalizzato4On"
                    android:layout_width="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@layout/acceso"
                    android:text="@string/On"
                    android:textColor="@android:color/black" />

                <Button
                    android:id="@+id/pesonalizzato4Off"
                    android:layout_width="90dp"
                    android:layout_marginRight="20dp"
                    android:background="@layout/spento"
                    android:text="@string/Off"
                    android:textColor="@android:color/black" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>

</ScrollView>